--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <h2 id="quizQuestion"></h2>
         <p id="quizCounter"></p>
         <div id="quizOptions"></div>
+        <button onclick="startTest()" id="startTestBtn" style="display: none;">Начать тестирование</button>
         <button onclick="submitAnswer()" id="submitBtn" style="display:none;">Ответить</button>
     </div>
 
@@ -54,7 +55,7 @@
     <div id="resultsSection" class="container" style="display:none;">
         <h2 id="resultsMessage"></h2>
         <button onclick="backToMainMenu()">Вернуться в главное меню</button>
-        <button onclick="restartQuiz()">Начать тест заново</button>
+        <button onclick="restartQuiz()">Пройти тест заново</button>
         <button onclick="goToTheory()">Перейти к теории</button>
     </div>
 
