--- a/index.html
+++ b/index.html
@@ -35,10 +35,15 @@
     </div>
 
     <!-- Страница темы -->
+    <!-- Страница темы -->
     <div id="topicContent" class="container" style="display:none;">
         <h2 id="topicTitle"></h2>
-        <p id="topicText"></p>
-        <img id="topicImage" src="" alt="Изображение темы">
+        <div id="topicTextContainer">
+            <p id="topicText"></p>
+        <!-- Добавляем изображения -->
+            <img id="topicImage1" src="" alt="Изображение 1" class="topic-image">
+            <img id="topicImage2" src="" alt="Изображение 2" class="topic-image">
+        </div>
         <button onclick="backToTheory()">Вернуться к выбору тем</button>
     </div>
 
