--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         <button onclick="backToMainMenu()">Вернуться в главное меню</button>
     </div>
 
-    <!-- Страница темы -->
-    <!-- Страница темы -->
+<!-- Страница темы -->
     <div id="topicContent" class="container" style="display:none;">
-        <h2 id="topicTitle"></h2>
+        <!-- Добавляем название темы в верхней части -->
+        <h2 id="topicTitle" class="topic-header"></h2>
         <div id="topicTextContainer">
             <p id="topicText"></p>
-        <!-- Добавляем изображения -->
+            <!-- Добавляем изображения -->
             <img id="topicImage1" src="" alt="Изображение 1" class="topic-image">
             <img id="topicImage2" src="" alt="Изображение 2" class="topic-image">
         </div>
