--- a/index.html
+++ b/index.html
@@ -36,14 +36,13 @@
 
 <!-- Страница темы -->
     <div id="topicContent" class="container" style="display:none;">
-    <!-- Добавляем название темы в верхней части -->
+        <!-- Заголовок темы -->
         <h2 id="topicTitle" class="topic-header"></h2>
+        <!-- Контейнер для текста -->
         <div id="topicTextContainer">
             <p id="topicText"></p>
-        <!-- Добавляем изображения -->
-            <img id="topicImage1" src="" alt="Изображение 1" class="topic-image">
-            <img id="topicImage2" src="" alt="Изображение 2" class="topic-image">
         </div>
+        <!-- Кнопка "Вернуться к выбору тем" -->
         <button onclick="backToTheory()">Вернуться к выбору тем</button>
     </div>
 
