--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div id="mainMenu" class="container">
         <!-- Кнопка для ввода никнейма -->
         <div id="nicknameButtonContainer">
-            <button id="nicknameButton" onclick="showNicknameModal()">
-                <img src="profile_icon.png" alt="Иконка профиля" id="profileIcon">
+            <button id="nicknameButton" onclick="checkNickname()">
+                <img src="https://raw.githubusercontent.com/MaxMoon228/WOW_Test/refs/heads/main/4fd8ec5d-3dd0-48d3-b9b6-a8d713743cf0_641132.png" alt="Иконка профиля" id="profileIcon">
             </button>
         </div>
         <h1>Геймификация процесса изучения истории Великой Отечественной Войны</h1>
@@ -78,7 +78,18 @@
             <button onclick="saveNickname()">Сохранить</button>
         </div>
     </div>
-
+    <!-- Страница профиля -->
+    <div id="profileSection" class="container" style="display:none;">
+        <h2 id="profileNickname">Гость</h2>
+        <div id="profileResults">
+            <h3>Ваши Результаты:</h3>
+            <p id="battleOfMoscowResult">Битва за Москву: 0/15</p>
+            <p id="leningradBlockadeResult">Блокада Ленинграда: 0/15</p>
+            <p id="stalingradBattleResult">Сталинградская битва: 0/15</p>
+            <p id="kurskBattleResult">Курская битва: 0/15</p>
+        </div>
+        <button onclick="backToMainMenu()">Вернуться в главное меню</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
