--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     <!-- Страница профиля -->
     <div id="profileSection" class="container" style="display:none;">
         <h2 id="profileNickname">Гость</h2>
+        <button id="changeNicknameButton" onclick="showNicknameModal()">Изменить ник</button>
         <div id="profileResults">
             <h3>Ваши Результаты:</h3>
             <p id="battleOfMoscowResult">Битва за Москву: 0/15</p>
